fixed(Comments): Fixed apiTags for endpoints
